@@ -11,6 +11,8 @@
 == Unreleased
 
 * Bump deps
+* Referenced maven repos now auto-upgraded to https
+https://github.com/cljdoc/cljdoc-analyzer/issues/87[#87]
 
 == v1.0.750
 
